Mod-Page-Upgrade

--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
     <div class="modalUp" id="modalUp">
         <div class="modalUp-content">
             <button class="bi bi-x-circle close" id="closeModalUp"></button>
-
-
+                <div class="Body-modalUp">
+                    <h1>Painel de Upgrade</h1>
+                    <div class="Body-modalUp-Content">
+                        <span> Acesse a página de Upgrade Status <br> para mais informações <br><a href="Page-Status/index.html" target="_blank" class="bi bi-info-circle"> Page Status Upgrade</a></span>
+                    </div>
+                    <div class="Body-modalUp-Content">
+                        <h2>Método Pomodoro</h2>
+                        <span>Previsto de Upgrade<br>
+                        <i>20/07/25</i></span>
+                    </div>
+                </div>
         </div>
     </div>
 
@@ -25,7 +34,10 @@
     <div class="modal" id="myModal">
         <div class="modal-content"> 
             <button class="bi bi-x-circle close" id="closeModal"></button>
-
+            <div class="Body-DarkMode">
+                <button class="btn-toggle bi bi-brightness-alt-high-fill"></button>
+                <p>Dark Mode</p>
+            </div>
 
 
 
@@ -74,6 +86,8 @@
             <button onclick="resetarTimer()" class="bi bi-arrow-repeat"></button>
         </div>
     </div>
+
+
 
     <!-- Scripts -->
     <script src="src/js/Timer.js"></script>
