--- a/index.html
+++ b/index.html
@@ -32,15 +32,23 @@
 
     <!-- Modal de configurações -->
     <div class="modal" id="myModal">
-        <div class="modal-content"> 
-            <button class="bi bi-x-circle close" id="closeModal"></button>
-            <div class="Body-DarkMode">
-                <button class="btn-toggle bi bi-brightness-alt-high-fill"></button>
-                <p>Dark Mode</p>
-            </div>
+        <div class="modal-content">
+             <button class="bi bi-x-circle close" id="closeModal"></button>
+                <div class="scroll-container">
+                    <div class="scroll-header">
+                        <h1>Configurações</h1>
+                    </div>
+                    <div class="scroll-content" id="scrollContent">
+                        <div class="scroll-item">
+                            <div class="Body-DarkMode">
+                                <h2>Dark Mode</h2>
+                                <button class="btn-toggle bi bi-brightness-alt-high-fill"></button>
+                            </div>
+                        </div>
+                    </div>
 
-
-
+                
+                </div>
             <p>Desenvolvedor <a href="https://github.com/oDyKoz" target="_blank">oDyKoz</a></p>
         </div>
     </div>
@@ -81,16 +89,19 @@
     
         <!-- Botões de controle -->
         <div class="controls">
-            <button onclick="iniciarTimer()" class="bi bi-caret-right-fill"></button>
-            <button onclick='pausarOuContinuar()' class="bi bi-exclamation-octagon-fill"></button>
-            <button onclick="resetarTimer()" class="bi bi-arrow-repeat"></button>
+            <button onclick="iniciarTimer()" id="controlButton">
+            <i class="bi bi-caret-right-fill"></i>
+            </button>
+
+            <!-- <button onclick='pausarOuContinuar()' class="bi bi-exclamation-octagon-fill"></button> -->
+            <button onclick="resetarTimer()" class="bi bi-arrow-repeat" id="resetButton"></button>
         </div>
     </div>
 
 
 
     <!-- Scripts -->
-    <script src="src/js/Timer.js"></script>
+    <script src="src/js/Timer.js" defer></script>
     <script type="module" src="src/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
