Mod-Config|Transition

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <div class="Body-DarkMode">
                                 <label for="DarkMode">Habilite o Dark Mode:</label>
                                 <div class="Body-Buttons-DarkMode">
-                                    <button class="btn-toggle-light bi bi-brightness-alt-high-fill" id="DarkMode"></button>
+                                    <button class="btn-toggle-light bi bi-brightness-alt-high-fill " id="DarkMode"></button>
                                     <button class="btn-toggle-dark bi bi-moon-fill" id="LightMode"></button>
                                 </div>
                             </div>
@@ -57,7 +57,7 @@
 
                 
                 </div>
-            <p>Desenvolvedor <a href="https://github.com/oDyKoz" target="_blank">oDyKoz</a></p>
+            <span>Desenvolvedor <a href="https://github.com/oDyKoz" target="_blank">oDyKoz</a></span>
         </div>
     </div>
 
@@ -72,7 +72,7 @@
     <!-- Modal Config-->
     <div class="container-popup-color" >
         <div class="content popup-color-buttom bg-all">
-            <button id="openModal" class="bi bi-gear-fill"></button>
+            <button id="openModal" class="bi bi-gear-wide-connected"></button>
             <p>Config</p>
         </div>
     </div>
