--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="src/svg/alarm_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" type="image/svg+xml" />
+    <link rel="icon" href="assets/alarm_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" type="image/svg+xml" />
 
-    <link rel="preload" href="src/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <link rel="preload" href="css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
@@ -167,8 +167,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="src/js/Timer.js" defer></script>
-    <script type="module" src="src/js/main.js" defer></script>
+    <script src="js/Timer.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 
 </body>
