fix: Time Modular

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,6 @@
         </div>
     </div>
 
-    <!-- Modal Configuração Pomodoro -->
-
     <!-- Modal de configurações -->
     <div class="modal modalStyle" id="myModal">
         <div class="modal-content">
@@ -133,12 +131,11 @@
     
         <!-- Botões de controle -->
         <div class="controls">
-            <button onclick="iniciarTimer()" id="controlButton">
+            <button id="controlButton">
             <i class="bi bi-caret-right-fill C-ColorAll"></i>
             </button>
 
-            <!-- <button onclick='pausarOuContinuar()' class="bi bi-exclamation-octagon-fill"></button> -->
-            <button onclick="resetarTimer()" id="resetButton">
+            <button id="resetButton">
                 <i class="bi bi-arrow-repeat C-ColorAll"></i>
             </button>
         </div>
